<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:viewBindingEnable="true"
    android:id="@+id/rootLayout"
    android:fitsSystemWindows="true"
    android:background="@mipmap/ic_team_welfare_bg"
    tools:context=".activity.mainUI.CreateTemplateAct">

    <!--顶部-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/dark_blue_04"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/acquireRecordsBackIV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/layoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="创建模板"
            android:textColor="@color/white" />

    </RelativeLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/shape_round_all_white10"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="提示"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="创建属于自己的文案AI"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:background="@drawable/shape_round_all_white12"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editor_create_act_hint5"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/team_userName_asterisk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="@color/red"
                        android:textSize="16sp"/>

                </LinearLayout>


                <EditText
                    android:id="@+id/team_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColorHint="@color/hint_text"
                    android:background="@drawable/shape_round_stroke_black5"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:padding="7dp"
                    android:hint="@string/editor_create_act_hint9"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editor_create_act_hint6"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/team_phone_asterisk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="@color/red"
                        android:textSize="16sp"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/template_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_text"
                    android:background="@drawable/shape_round_stroke_black5"
                    android:padding="7dp"
                    android:hint="@string/editor_create_act_hint10"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editor_create_act_hint7"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/team_name_asterisk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:textColor="@color/red"
                        android:textSize="16sp"/>

                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:background="@drawable/shape_round_stroke_black5"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:layout_height="0dp">

                    <EditText
                        android:id="@+id/template_prompting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:background="@null"
                        android:gravity="top"
                        android:padding="7dp"
                        android:textColorHint="@color/hint_text"
                        android:hint="@string/editor_create_act_hint8"
                        android:textSize="15sp"/>
                </ScrollView>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/teamSubmit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/editor_create_act_hint11"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_round_all_yellow15"/>

    </LinearLayout>


</LinearLayout>